force-app/main/default/objects/TASKRAY__trChecklistItem__c/TASKRAY__trChecklistItem__c.object-meta.xml
<CustomObject>
    <description>This is the primary TaskRay object for Checklist Items.  This object may be used to manage reports, dashboards, workflows and other native Salesforce functionality.</description>
    <label>TaskRay Checklist Item</label>
    <nameField>
        <label>TaskRay Checklist Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TaskRay Checklist Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>