force-app/main/default/objects/TASKRAY__trChecklistItem__c/fields/TASKRAY__Completed__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Completed</label>
    <type>Checkbox</type>
</CustomField>