force-app/main/default/objects/TASKRAY__trChecklistItem__c/fields/TASKRAY__Project_Task__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__Project_Task__c</fullName>
    <label>TaskRay Task</label>
    <referenceTo>TASKRAY__Project_Task__c</referenceTo>
    <relationshipLabel>TaskRay Checklist Items</relationshipLabel>
    <relationshipName>TaskRay_Checklist_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>