force-app/main/default/objects/TASKRAY__trChecklistItem__c/fields/TASKRAY__trLongName__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trLongName__c</fullName>
    <label>Checklist Item Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>