force-app/main/default/objects/TASKRAY__trChecklistItem__c/fields/TASKRAY__trProjectId__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trProjectId__c</fullName>
    <formula>CASESAFEID(TASKRAY__Project_Task__r.TASKRAY__Project__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Id</label>
    <type>Text</type>
</CustomField>