force-app/main/default/objects/TASKRAY__trChecklistItem__c/listViews/TASKRAY__MyOpenChecklistItems.listView-meta.xml
<ListView>
    <fullName>TASKRAY__MyOpenChecklistItems</fullName>
    <columns>NAME</columns>
    <columns>TASKRAY__trChecklistGroup__c</columns>
    <columns>TASKRAY__Project_Task__c</columns>
    <columns>TASKRAY__trOwner__c</columns>
    <columns>TASKRAY__Completed__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TASKRAY__Completed__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>TASKRAY__trIsMyChecklistItem__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Open Checklist Items</label>
</ListView>